# chain_c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build_chain_c.sh  clean.sh
.github/workflows/: ci.yml
artifacts/: rabinSpike.json  rabinSpike.scrypt  rabinSpike.scrypt.map  rabinSpike.transformer.json  ricardianTea.json  ricardianTea.scrypt  ricardianTea.scrypt.map  ricardianTea.transformer.json  zkHiddenLimit.json  zkHiddenLimit.scrypt  zkHiddenLimit.scrypt.map  zkHiddenLimit.transformer.json
artifacts/src/contracts-next/: agentTea.json  agentTea.scrypt  agentTea.scrypt.map  agentTea.transformer.json  arpAttest.json  arpAttest.scrypt  arpAttest.scrypt.map  arpAttest.transformer.json  attestorTea.json  attestorTea.scrypt  attestorTea.scrypt.map  attestorTea.transformer.json  publisherTea.json  publisherTea.scrypt  publisherTea.scrypt.map  publisherTea.transformer.json
artifacts/zk/: square.vkey.json  square.wasm  square.zkey  withinLimit.vkey.json  withinLimit.wasm  withinLimit.zkey
circuits/: withinLimit.circom
circuits/spike/: square.circom
include/: atlas_identity.h  provenance.h  reputation_indexer.h  ricardian_charter.h
include/attestor/: auto_exec_linter.h
include/broker/: authorization_envelope.h  chain_revocation_oracle.h  identity_chain_view.h  key_broker.h
include/bsv/: address.h  base58.h  num2bin.h  script.h  script_utils.h  sighash.h  tx.h  tx_builder.h  tx_change.h  varint.h
include/chain/: tx_parse.h
include/chainSources/: bsv_fees.h  http_transport.h  throttled_provider.h  utxo_select.h  whats_on_chain.h  woc_client.h  woc_rate_limiter.h
include/common/: bytes.h  error.h  hex.h  utf8.h
include/contracts/: rabin_spike.h  ricardian_tea.h  zk_hidden_limit.h
include/contracts_next/: agent_tea.h  arp_attest.h  attestor_tea.h  publisher_tea.h
include/crypto/: aes_gcm.h  bignum.h  ecdsa.h  hash.h  rabin.h  rand.h
include/json/: json.h
include/lib/: blockchain.h  merkle_path.h  rabin_verifier.h  scrypt_state.h
include/privacy/: enclave.h  key_vault.h
include/sandbox/: sandboxed_agent.h
include/scripts/: agent_state.h  agentd.h  agentd_persistence.h  bonsai_third_entry.h  chain_broadcast.h  cpfp.h  deploy.h  keygen.h  live_agent_smoke.h  live_smoke.h  opreturn.h  pay.h  script_support.h  verify_ricardian.h  woc.h  zk_build.h
include/scrypt/: artifact_loader.h  contract_call.h  script_codec.h  scrypt_contract.h
include/txbuilders/: agent_tea_tx_builder.h  arp_tx_builder.h  contract_sign.h  ricardian_tea_tx_builder.h
include/verifier/: manifest_registry.h  rabin_attestor.h  release_anchor_verifier.h  stake_policy.h
include/wallet/: keygen.h  send.h  spend.h
include/zk/: g16.h  limit_commitment.h  mimc7.h  prover.h
legal/: ricardian-prose.md
src/: atlas_identity.c  provenance.c  reputation_indexer.c  ricardian_charter.c
src/attestor/: auto_exec_linter.c
src/broker/: authorization_envelope.c  chain_revocation_oracle.c  identity_chain_view.c  key_broker.c
src/bsv/: address.c  base58.c  num2bin.c  script.c  script_utils.c  sighash.c  tx.c  tx_builder.c  tx_change.c  varint.c
src/chain/: tx_parse.c
src/chainSources/: bsv_fees.c  http_transport.c  throttled_provider.c  utxo_select.c  whats_on_chain.c  woc_client.c  woc_rate_limiter.c
src/common/: bytes.c  error.c  hex.c  utf8.c
src/contracts/: rabin_spike.c  ricardian_tea.c  zk_hidden_limit.c
src/contracts_next/: agent_tea.c  arp_attest.c  attestor_tea.c  publisher_tea.c
src/crypto/: aes_gcm.c  bignum.c  ecdsa.c  hash.c  rabin.c  rand.c
src/json/: json.c
src/lib/: blockchain.c  merkle_path.c  rabin_verifier.c  scrypt_state.c
src/privacy/: enclave.c  key_vault.c
src/sandbox/: sandboxed_agent.c
src/scripts/: agent_state.c  agentd_lib.c  agentd_persistence.c  bonsai_third_entry_lib.c  chain_broadcast.c  cpfp_lib.c  deploy_lib.c  keygen_lib.c  live_agent_smoke_lib.c  live_smoke_lib.c  opreturn_lib.c  pay_lib.c  script_support.c  verify_ricardian_lib.c  woc_lib.c  zk_build_lib.c
src/scrypt/: artifact_loader.c  contract_call.c  script_codec.c  scrypt_contract.c
src/txbuilders/: agent_tea_tx_builder.c  arp_tx_builder.c  contract_sign.c  ricardian_tea_tx_builder.c
src/verifier/: manifest_registry.c  rabin_attestor.c  release_anchor_verifier.c  stake_policy.c
src/wallet/: keygen.c  send.c  spend.c
src/zk/: g16.c  limit_commitment.c  mimc7.c  prover.c
tests/: CMakeLists.txt  test_agent_tea.c  test_agent_tea_apply_action.c  test_agentd.c  test_agentd_persistence.c  test_arp_attest.c  test_arp_tea.c  test_atlas_identity.c  test_auto_exec_linter.c  test_broadcast_golden.c  test_bsv_tooling.c  test_chain_broadcast.c  test_chain_revocation_oracle.c  test_enclave.c  test_forward_walk.c  test_g16_verify.c  test_identity_chain_view.c  test_key_broker.c  test_key_vault.c  test_keygen.c  test_limit_commitment.c  test_manifest_registry.c  test_parity.c  test_provenance.c  test_rabin_attestor.c  test_rabin_spike.c  test_recover_scriptsig.c  test_recover_state_output.c  test_release_anchor_verifier.c  test_reputation_indexer.c  test_ricardian_charter.c  test_ricardian_tea.c  test_ricardian_tea_change.c  test_sandboxed_agent.c  test_spend.c  test_theme_c_integration.c  test_tier012_golden.c  test_tier3456_golden.c  test_tx_change.c  test_tx_parse.c  (+6 more)
tests/golden/: README.md  broadcast.json  golden.json
tests/golden/by-area/: bsvFees.json  intEncoders.json  lockingScripts.json  mimc7.json  provenance.json  rabin.json  reputationIndexer.json  ricardianCharter.json  txSighashAddress.json
tests/helpers/: fixtures.c  fixtures.h  mock_chain_source.c  mock_chain_source.h  mock_http_transport.c  mock_http_transport.h  rabin_test.c  rabin_test.h  tx_helper.c  tx_helper.h
